# Tempo

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  buildWindows.yml
include/: IOManager.hpp  device.hpp  inputDevice.hpp  outputDevice.hpp  outputManager.hpp
src/: IOManager.cpp  device.cpp  main.cpp  outputDevice.cpp  outputManager.cpp
